fix nav link alignment

--- a/src/assets/style/components/_main-nav.scss
+++ b/src/assets/style/components/_main-nav.scss
@@ -133,7 +133,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.75rem 1rem !important;
+  padding: 0.75rem 0 !important;
 
   svg {
     margin-bottom: .4rem;
